syntax = "proto3";
package auth;

import "general.proto";
option go_package = "github.com/anton-uvarenko/cinema/authorization-service/protobufs/auth";

message EmailPayload {
  string email = 1;
}

message CodePayload {
  int32 code = 1;
  string email = 2;
}

message PasswordPayload {
  int32 id = 1;
  string password = 2;
}

service PassVerify {
  rpc SendRecoveryCode(EmailPayload) returns (general.Empty);
  rpc VerifyRecoveryCode(CodePayload) returns (general.JwtResponse);
  rpc UpdatePassword(PasswordPayload) returns (general.Empty);
}