syntax = "proto3";
package general;

option go_package = "github.com/anton-uvarenko/cinema/users-service/protobufs/users";

message JwtResponse {
  string jwt = 1;
}

message Empty {}